<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menuakhir"
    tools:context=".AkhirBermain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUlangi"
            android:layout_width="@dimen/width2"
            android:layout_height="85dp"
            android:layout_marginLeft="45dp"
            android:background="@android:color/transparent"
            android:onClick="ulangMain"/>

        <Button
            android:id="@+id/btnMenu"
            android:background="@android:color/transparent"
            android:layout_width="@dimen/width2"
            android:layout_height="85dp"
            android:layout_marginLeft="25dp"
            android:onClick="menuDepan"/>

    </LinearLayout>

</RelativeLayout>